@@ -2,15 +2,19 @@ package com.example.onlyone.domain.chat.service;
 
 import com.example.onlyone.domain.chat.dto.ChatRoomResponse;
 import com.example.onlyone.domain.chat.entity.ChatRoom;
+import com.example.onlyone.domain.chat.entity.Message;
 import com.example.onlyone.domain.chat.repository.ChatRoomRepository;
+import com.example.onlyone.domain.chat.repository.MessageRepository;
 import com.example.onlyone.domain.user.service.UserService;
 import com.example.onlyone.global.exception.CustomException;
 import com.example.onlyone.global.exception.ErrorCode;
 import lombok.RequiredArgsConstructor;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,6 +23,7 @@ import java.util.stream.Collectors;
 public class ChatRoomService {
 
     private final ChatRoomRepository chatRoomRepository;
+    private final MessageRepository messageRepository;
     private final UserService userService;
 
     // 채팅방 삭제
@@ -26,26 +31,37 @@ public class ChatRoomService {
     public void deleteChatRoom(Long chatRoomId, Long clubId) {
         ChatRoom chatRoom = chatRoomRepository.findByChatRoomIdAndClubClubId(chatRoomId, clubId)
                 .orElseThrow(() -> new CustomException(ErrorCode.CHAT_ROOM_NOT_FOUND));
-        chatRoomRepository.delete(chatRoom);
+        try {
+            chatRoomRepository.delete(chatRoom);
+        } catch (DataIntegrityViolationException e) {
+            throw new CustomException(ErrorCode.CHAT_ROOM_DELETE_FAILED);
+        }
     }
 
 
     // 유저가 특정 모임(club)의 어떤 채팅방들에 참여하고 있는지 조회
     public List<ChatRoomResponse> getChatRoomsUserJoinedInClub(Long clubId) {
-        try {
-            Long userId = userService.getCurrentUser().getUserId();
-            return chatRoomRepository.findChatRoomsByUserIdAndClubId(userId, clubId).stream()
-                    .map(ChatRoomResponse::from)
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new CustomException(ErrorCode.INTERNAL_CHAT_SERVER_ERROR);
-        }
+        Long userId = userService.getCurrentUser().getUserId();
+
+        List<ChatRoom> chatRooms = chatRoomRepository.findChatRoomsByUserIdAndClubId(userId, clubId);
+        List<Long> chatRoomIds = chatRooms.stream()
+                .map(ChatRoom::getChatRoomId)
+                .toList();
+
+        // 마지막 메시지를 한 번에 조회
+        List<Message> lastMessages = messageRepository.findLastMessagesByChatRoomIds(chatRoomIds);
+        Map<Long, Message> lastMessageMap = lastMessages.stream()
+                .collect(Collectors.toMap(
+                        m -> m.getChatRoom().getChatRoomId(),
+                        Function.identity()
+                ));
+
+        return chatRooms.stream()
+                .map(chatRoom -> {
+                    Message lastMessage = lastMessageMap.get(chatRoom.getChatRoomId());
+                    return ChatRoomResponse.from(chatRoom, lastMessage);
+                })
+                .collect(Collectors.toList());
     }
 
-    //채팅방 단건 조회
-    public ChatRoomResponse getById(Long chatRoomId) {
-        ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
-                .orElseThrow(() -> new CustomException(ErrorCode.CHAT_ROOM_NOT_FOUND));
-        return ChatRoomResponse.from(chatRoom);
-    }
 }
